added deployment workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,19 +42,19 @@ jobs:
           
           # Pass the full image name and tag to Maven using the -Dimage property
           mvn compile com.google.cloud.tools:jib-maven-plugin:build -Dimage="${IMAGE_NAME}:${IMAGE_TAG}"
-#  deploy:
-#    needs: build-and-push
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Set up kubectl
-#        uses: azure/setup-kubectl@v3
-#
-#      - name: Configure Kubernetes cluster connection
-#        uses: azure/k8s-set-context@v3
-#        with:
-#          method: kubeconfig
-#          kubeconfig: ${{ secrets.KUBECONFIG }}
-#
-#      - name: Deploy to Kubernetes
-#        run: |
-#          kubectl set image deployment/${{env.SERVICE_NAME}}-deployment ${{env.SERVICE_NAME}}=${{ secrets.DOCKERHUB_USERNAME }}/${{env.SERVICE_NAME}}:${{ needs.build-and-push.outputs.IMAGE_TAG }}
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Configure Kubernetes cluster connection
+        uses: azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl set image deployment/${{env.SERVICE_NAME}}-deployment ${{env.SERVICE_NAME}}=${{ secrets.DOCKERHUB_USERNAME }}/${{env.SERVICE_NAME}}:${{ needs.build-and-push.outputs.IMAGE_TAG }}
