--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.tintsteps</groupId>
+	<groupId>com.tinysteps</groupId>
 	<artifactId>sessionservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>session-service</name>
