updated k8s and docker config and refactored folder structure

--- a/k8s/configmap.yml
+++ b/k8s/configmap.yml
@@ -5,5 +5,5 @@ metadata:
 data:
   SPRING_APPLICATION_NAME: "ts-session-service"
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: "http://ts-auth-service:8081"
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres-service:5432/sessions"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql.infrastructure.svc.cluster.local:5432/session_service"
   EUREKA_CLIENT_SERVICE-URL_DEFAULTZONE: "http://ts-service-registry:8761/eureka/"
