--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'maven'
+          java-version: "21"
+          distribution: "temurin"
+          cache: "maven"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -64,9 +64,9 @@ jobs:
         run: |
           IMAGE_TAG="${{ needs.build-and-push.outputs.tag }}"
           cd k8s
-          
+
           # Use kustomize to set the new image tag dynamically
-          kustomize edit set image subhankarm2312/ts-session-service:${IMAGE_TAG}
-          
+          kustomize edit set image tinystepsd3v/ts-session-service:${IMAGE_TAG}
+
           # Apply all the manifests in the k8s directory
           kubectl apply -k .
